# yawm

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt
src/serialization/: CMakeLists.txt  serialization.cpp  serialization.h
src/test/: CMakeLists.txt  test.cpp
